@@ -777,7 +777,6 @@
 		$db_tmp_item['templateid'] = $copy_mode?0:$db_tmp_item['itemid'];
 
 		$result = add_item($db_tmp_item);
-
 	return $result;
 	}
 
