@@ -41,7 +41,7 @@ timer() {
 		let TOTALHOURS=TOTALTIME/3600
 		let TOTALMINUTES=(TOTALTIME-TOTALHOURS*3600)/60
 		let TOTALSECONDS=TOTALTIME%60
-	echo "$(echo $TIMER | tr _ " ") took $TOTALHOURS:$TOTALMINUTES:$TOTALSECONDS"
+	echo "$(echo $TIMER | tr _ " ") took $TOTALHOURS:$(printf "%02d" $TOTALMINUTES):$(printf "%02d" $TOTALSECONDS)"
 	esac
 }
 
@@ -53,7 +53,7 @@ drop_index() {
 
 echo "Dropping indexes that might need re-creation..."
 
-timer start Dropping indexes
+timer start dropping of indexes
 
 for i in\
  "actions      actions_1"\
@@ -70,28 +70,35 @@ for i in\
 	drop_index $i
 done
 echo -n " ... "
-timer stop Dropping indexes
+timer stop dropping of indexes
 
 echo "Converting database to UTF8"
 
-timer start Converting to UTF8
+timer start conversion to UTF8
 echo "ALTER DATABASE CHARACTER SET utf8;" | $MYSQL $MYSQLPARAMS
 for i in $(echo "show tables;" | $MYSQL -N $MYSQLPARAMS); do
 	echo "ALTER TABLE $i CONVERT TO CHARACTER SET utf8 COLLATE utf8_general_ci;" | $MYSQL $MYSQLPARAMS
 done
 echo -n " ... "
-timer stop Converting to UTF8
+timer stop conversion to UTF8
 
 echo "Patching the database"
 
-timer start Patching the database
+timer start patching of the database
 $MYSQL $MYSQLPARAMS < patch.sql || fail "Failed to patch Zabbix database. Restore from backup"
 echo -n " ... "
-timer stop Patching the database
+timer stop patching of the database
 
 echo "Adding 'Discovered' host group"
 
-echo "update ids set nextid=nextid+1 where table_name='groups' and field_name='groupid';
+CURRENTID=$(echo "select nextid from ids where table_name='groups' and field_name='groupid';" | $MYSQL $MYSQLPARAMS -N)
 
-update config set discovery_groupid=(select nextid from ids where table_name='groups' and field_name='groupid') where configid='1';
+[[ "$CURRENTID" ]] && {
+	echo "update ids set nextid='$[$CURRENTID+1]' where table_name='groups' and field_name='groupid';" | $MYSQL $MYSQLPARAMS
+} || {
+	CURRENTID=$(echo "select groupid from groups order by groupid desc limit 1;" | $MYSQL $MYSQLPARAMS -N)
+	echo "insert into ids values (0,'groups','groupid',$[$CURRENTID+1]);" | $MYSQL $MYSQLPARAMS
+}
+
+echo "update config set discovery_groupid=(select nextid from ids where table_name='groups' and field_name='groupid') where configid='1';
 insert into groups (groupid,name,internal) select nextid,'Discovered Hosts','1' from ids where table_name='groups' and field_name='groupid';" | $MYSQL $MYSQLPARAMS
